--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -112,6 +112,7 @@ navbar.settings=Impostazioni
 #############
 settings.title=Impostazioni
 settings.update=Aggiornamento disponibile
+settings.updateAvailable={0} is the current installed version. A new version ({1}) is available.
 settings.appVersion=Versione App:
 settings.downloadOption.title=Scegli opzione di download (Per file singoli non compressi):
 settings.downloadOption.1=Apri in questa finestra
@@ -189,7 +190,7 @@ multiTool.tags=Strumento multiplo,operazione multipla,interfaccia utente,trascin
 
 home.merge.title=Unisci
 home.merge.desc=Unisci facilmente più PDF in uno.
-merge.tags=unione,operazioni sulla pagina,back end,lato server
+merge.tags=unione,operazioni sulla pagina,back-end,lato server
 
 home.split.title=Dividi
 home.split.desc=Dividi un singolo PDF in più documenti.
