--- a/src/main/resources/messages_ar_AR.properties
+++ b/src/main/resources/messages_ar_AR.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=تنزيل الملف
 settings.zipThreshold=ملفات مضغوطة عند تجاوز عدد الملفات التي تم تنزيلها
 settings.signOut=Sign Out
 settings.accountSettings=Account Settings
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=Change Credentials
 changeCreds.header=Update Your Account Details
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDF إلى PDF / A
 pdfToPDFA.credit=تستخدم هذه الخدمة OCRmyPDF لتحويل PDF / A.
 pdfToPDFA.submit=تحويل
 pdfToPDFA.tip=Currently does not work for multiple inputs at once
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=Enter number of horizontal divisions
 split-by-sections.vertical.placeholder=Enter number of vertical divisions
 split-by-sections.submit=Split PDF
 split-by-sections.merge=Merge Into One PDF
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=Licenses
