--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=Scarica file
 settings.zipThreshold=Comprimi file in .zip quando il numero di download supera
 settings.signOut=Logout
 settings.accountSettings=Impostazioni Account
-
-
+settings.bored.help=Abilita easter egg game
+settings.cacheInputs.name=Salva gli input del modulo
+settings.cacheInputs.help=Abilitare per memorizzare gli input utilizzati in precedenza per esecuzioni future
 
 changeCreds.title=Cambia credenziali
 changeCreds.header=Aggiorna i dettagli del tuo account
@@ -645,7 +646,7 @@ removeBlanks.submit=Rimuovi
 
 #removeAnnotations
 removeAnnotations.title=Rimuovi Annotazioni
-removeAnnotations.header=Remuovi Annotazioni
+removeAnnotations.header=Rimuovi Annotazioni
 removeAnnotations.submit=Rimuovi
 
 
@@ -940,6 +941,7 @@ pdfToPDFA.header=Da PDF a PDF/A
 pdfToPDFA.credit=Questo servizio utilizza OCRmyPDF per la conversione in PDF/A.
 pdfToPDFA.submit=Converti
 pdfToPDFA.tip=Attualmente non funziona per più input contemporaneamente
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=Inserire il numero di divisioni orizzon
 split-by-sections.vertical.placeholder=Inserire il numero di divisioni verticali
 split-by-sections.submit=Dividi PDF
 split-by-sections.merge=Unisci in un unico PDF
+
+
+#printFile
+printFile.title=Stampa file
+printFile.header=Stampa file su stampante
+printFile.selectText.1=Seleziona file da stampare
+printFile.selectText.2=Inserire il nome della stampante
+printFile.submit=Stampare
+
 
 #licenses
 licenses.nav=Licenze
