--- a/src/main/resources/messages_bg_BG.properties
+++ b/src/main/resources/messages_bg_BG.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=Изтегли файл
 settings.zipThreshold=Архивирайте файловете, когато броят на изтеглените файлове надвишава
 settings.signOut=Изход
 settings.accountSettings=Настройки на акаунта
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=Промяна на идентификационните данни
 changeCreds.header=Актуализирайте данните за акаунта си
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDF към PDF/A
 pdfToPDFA.credit=Тази услуга използва OCRmyPDF за PDF/A преобразуване.
 pdfToPDFA.submit=Преобразуване
 pdfToPDFA.tip=Currently does not work for multiple inputs at once
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=Enter number of horizontal divisions
 split-by-sections.vertical.placeholder=Enter number of vertical divisions
 split-by-sections.submit=Split PDF
 split-by-sections.merge=Merge Into One PDF
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=Licenses
