--- a/src/main/resources/messages_ca_CA.properties
+++ b/src/main/resources/messages_ca_CA.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=Descarrega Arxiu
 settings.zipThreshold=Comprimiu els fitxers quan el nombre de fitxers baixats superi
 settings.signOut=Sortir
 settings.accountSettings=Account Settings
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=Change Credentials
 changeCreds.header=Update Your Account Details
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDF a PDF/A
 pdfToPDFA.credit=Utilitza OCRmyPDF per la conversió a PDF/A
 pdfToPDFA.submit=Converteix
 pdfToPDFA.tip=Currently does not work for multiple inputs at once
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=Enter number of horizontal divisions
 split-by-sections.vertical.placeholder=Enter number of vertical divisions
 split-by-sections.submit=Split PDF
 split-by-sections.merge=Merge Into One PDF
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=Licenses
