--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=Télécharger le fichier
 settings.zipThreshold=Compresser les fichiers en ZIP lorsque le nombre de fichiers téléchargés dépasse
 settings.signOut=Déconnexion
 settings.accountSettings=Paramètres du compte
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=Modifiez vos identifiants
 changeCreds.header=Mettez à jour vos identifiants de connexion
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDF en PDF/A
 pdfToPDFA.credit=Ce service utilise OCRmyPDF pour la conversion en PDF/A.
 pdfToPDFA.submit=Convertir
 pdfToPDFA.tip=Currently does not work for multiple inputs at once
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=Saisir le nombre de divisions horizonta
 split-by-sections.vertical.placeholder=Entrer le nombre de divisions verticales
 split-by-sections.submit=Diviser le PDF
 split-by-sections.merge=Fusionner en un seul PDF
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=Licences
