--- a/src/main/resources/messages_id_ID.properties
+++ b/src/main/resources/messages_id_ID.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=Unduh berkas
 settings.zipThreshold=Berkas zip ketika jumlah berkas yang diunduh melebihi
 settings.signOut=Keluar
 settings.accountSettings=Pengaturan Akun
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=Ubah Kredensial
 changeCreds.header=Perbarui Detail Akun Anda
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDF ke PDF/A
 pdfToPDFA.credit=Layanan ini menggunakan OCRmyPDF untuk konversi PDF/A.
 pdfToPDFA.submit=Konversi
 pdfToPDFA.tip=Currently does not work for multiple inputs at once
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=Input angka untuk pembagian horizontal
 split-by-sections.vertical.placeholder=Input angka untuk pembagian vertikal
 split-by-sections.submit=Pisahkan PDF
 split-by-sections.merge=Merge Into One PDF
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=Licenses
