--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=ファイルをダウンロード
 settings.zipThreshold=このファイル数を超えたときにファイルを圧縮する
 settings.signOut=サインアウト
 settings.accountSettings=アカウント設定
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=資格情報の変更
 changeCreds.header=アカウントの詳細を更新する
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDFをPDF/Aに変換
 pdfToPDFA.credit=本サービスはPDF/Aの変換にOCRmyPDFを使用しています。
 pdfToPDFA.submit=変換
 pdfToPDFA.tip=現在、一度に複数の入力に対して機能しません
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=水平方向の分割数を選択
 split-by-sections.vertical.placeholder=垂直方向の分割数を選択
 split-by-sections.submit=分割
 split-by-sections.merge=1 つの PDF に結合するかどうか
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=ライセンス
