--- a/src/main/resources/messages_ko_KR.properties
+++ b/src/main/resources/messages_ko_KR.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=다운로드
 settings.zipThreshold=다운로드한 파일 수가 초과된 경우 파일 압축하기
 settings.signOut=로그아웃
 settings.accountSettings=계정 설정
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=계정 정보 변경
 changeCreds.header=계정 정보 업데이트
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDF 문서를 PDF/A로 변환
 pdfToPDFA.credit=이 서비스는 PDF/A 변환을 위해 OCRmyPDF 문서를 사용합니다.
 pdfToPDFA.submit=변환
 pdfToPDFA.tip=현재 한 번에 여러 입력에 대해 작동하지 않습니다.
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=수평 분할 수를 입력합니다
 split-by-sections.vertical.placeholder=수직 분할 수를 입력합니다
 split-by-sections.submit=PDF 분할
 split-by-sections.merge=하나의 PDF로 병합
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=라이센스
