--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -121,8 +121,9 @@ settings.downloadOption.3=下載檔案
 settings.zipThreshold=當下載的檔案數量超過時，壓縮檔案
 settings.signOut=登出
 settings.accountSettings=帳戶設定
-
-
+settings.bored.help=Enables easter egg game
+settings.cacheInputs.name=Save form inputs
+settings.cacheInputs.help=Enable to store previously used inputs for future runs
 
 changeCreds.title=變更憑證
 changeCreds.header=更新您的帳戶詳細資訊
@@ -940,6 +941,7 @@ pdfToPDFA.header=PDF 轉 PDF/A
 pdfToPDFA.credit=此服務使用 OCRmyPDF 進行 PDF/A 轉換
 pdfToPDFA.submit=轉換
 pdfToPDFA.tip=目前不支援上傳多個
+pdfToPDFA.outputFormat=Output format
 
 
 #PDFToWord
@@ -1022,6 +1024,15 @@ split-by-sections.horizontal.placeholder=輸入水平劃分的數量
 split-by-sections.vertical.placeholder=輸入垂直劃分的數量
 split-by-sections.submit=分割 PDF
 split-by-sections.merge=是否合併為一個pdf
+
+
+#printFile
+printFile.title=Print File
+printFile.header=Print File to Printer
+printFile.selectText.1=Select File to Print
+printFile.selectText.2=Enter Printer Name
+printFile.submit=Print
+
 
 #licenses
 licenses.nav=許可證
