--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -57,6 +57,8 @@ usernameExistsMessage=New Username already exists.
 invalidUsernameMessage=Invalid username, Username must only contain alphabet characters and numbers.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
+downgradeCurrentUserMessage=Cannot downgrade current user's role
+downgradeCurrentUserLongMessage=Cannot downgrade current user's role. Hence, current user will not be shown.
 error=Error
 oops=Oops!
 help=Help
@@ -173,6 +175,7 @@ adminUserSettings.demoUser=Demo User (No custom settings)
 adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Force user to change password on login
 adminUserSettings.submit=Save User
+adminUserSettings.changeUserRole=Change User's Role
 
 #############
 # HOME-PAGE #
@@ -437,6 +440,8 @@ login.rememberme=Remember me
 login.invalid=Invalid username or password.
 login.locked=Your account has been locked.
 login.signinTitle=Please sign in
+login.ssoSignIn=Login via Single Sign-on
+login.oauth2AutoCreateDisabled=OAUTH2 Auto-Create User Disabled
 
 
 #auto-redact
@@ -688,7 +693,8 @@ repair.submit=Repair
 
 #flatten
 flatten.title=Flatten
-flatten.header=Flatten PDFs
+flatten.header=Flatten PDF
+flatten.flattenOnlyForms=Flatten only forms 
 flatten.submit=Flatten
 
 
