--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -57,6 +57,8 @@ usernameExistsMessage=Il nuovo nome utente esiste già.
 invalidUsernameMessage=Nome utente non valido, il nome utente deve contenere solo caratteri alfabetici e numeri.
 deleteCurrentUserMessage=Impossibile eliminare l'utente attualmente connesso.
 deleteUsernameExistsMessage=Il nome utente non esiste e non può essere eliminato.
+downgradeCurrentUserMessage=Impossibile declassare il ruolo dell'utente corrente
+downgradeCurrentUserLongMessage=Impossibile declassare il ruolo dell'utente corrente. Pertanto, l'utente corrente non verrà visualizzato.
 error=Errore
 oops=Oops!
 help=Aiuto
@@ -112,7 +114,7 @@ navbar.settings=Impostazioni
 #############
 settings.title=Impostazioni
 settings.update=Aggiornamento disponibile
-settings.updateAvailable={0} is the current installed version. A new version ({1}) is available.
+settings.updateAvailable={0} è la versione attualmente installata. Una nuova versione ({1}) è disponibile.
 settings.appVersion=Versione App:
 settings.downloadOption.title=Scegli opzione di download (Per file singoli non compressi):
 settings.downloadOption.1=Apri in questa finestra
@@ -173,6 +175,7 @@ adminUserSettings.demoUser=Utente demo (nessuna impostazione personalizzata)
 adminUserSettings.internalApiUser=API utente interna
 adminUserSettings.forceChange=Forza l'utente a cambiare nome username/password all'accesso
 adminUserSettings.submit=Salva utente
+adminUserSettings.changeUserRole=Cambia il ruolo dell'utente
 
 #############
 # HOME-PAGE #
@@ -437,6 +440,8 @@ login.rememberme=Ricordami
 login.invalid=Nome utente o password errati.
 login.locked=Il tuo account è stato bloccato.
 login.signinTitle=Per favore accedi
+login.ssoSignIn=Accedi tramite Single Sign-on
+login.oauth2AutoCreateDisabled=Creazione automatica utente OAUTH2 DISABILITATA
 
 
 #auto-redact
@@ -687,8 +692,9 @@ repair.submit=Ripara
 
 
 #flatten
-flatten.title=Appiattisci
+flatten.title=Appiattire
 flatten.header=Appiattisci PDF
+flatten.flattenOnlyForms=Appiattisci solo i moduli
 flatten.submit=Appiattisci
 
 
@@ -941,7 +947,7 @@ pdfToPDFA.header=Da PDF a PDF/A
 pdfToPDFA.credit=Questo servizio utilizza OCRmyPDF per la conversione in PDF/A.
 pdfToPDFA.submit=Converti
 pdfToPDFA.tip=Attualmente non funziona per più input contemporaneamente
-pdfToPDFA.outputFormat=Output format
+pdfToPDFA.outputFormat=Formato di output
 
 
 #PDFToWord
