add authenticated string

--- a/src/main/resources/messages_bg_BG.properties
+++ b/src/main/resources/messages_bg_BG.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Вътрешен API потребител
 adminUserSettings.forceChange=Принудете потребителя да промени потребителското име/парола при влизане
 adminUserSettings.submit=Съхранете потребителя
 adminUserSettings.changeUserRole=Промяна на ролята на потребителя
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
