--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Interner API-Benutzer
 adminUserSettings.forceChange=Benutzer dazu zwingen, Benutzernamen/Passwort bei der Anmeldung zu ändern
 adminUserSettings.submit=Benutzer speichern
 adminUserSettings.changeUserRole=Benutzerrolle ändern
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
