--- a/src/main/resources/messages_el_GR.properties
+++ b/src/main/resources/messages_el_GR.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Εσωτερικός API χρήστης
 adminUserSettings.forceChange=Αναγκάστε τον χρήστη να αλλάξει το όνομα χρήστη/κωδικό πρόσβασης κατά τη σύνδεση
 adminUserSettings.submit=Αποθήκευση Χρήστη
 adminUserSettings.changeUserRole=Αλλαγή ρόλου χρήστη
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
