--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Usuario interno de API
 adminUserSettings.forceChange=Forzar usuario a cambiar usuario/contraseña en el acceso
 adminUserSettings.submit=Guardar Usuario
 adminUserSettings.changeUserRole=Cambiar rol de usuario
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
