--- a/src/main/resources/messages_eu_ES.properties
+++ b/src/main/resources/messages_eu_ES.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Force user to change password on login
 adminUserSettings.submit=Gorde Erabiltzailea
 adminUserSettings.changeUserRole=Erabiltzailearen rola aldatu
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
