--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Forcer l’utilisateur à changer son nom d’utilisateur/mot de passe lors de la connexion
 adminUserSettings.submit=Ajouter
 adminUserSettings.changeUserRole=Changer le rôle de l'utilisateur
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
