--- a/src/main/resources/messages_hi_IN.properties
+++ b/src/main/resources/messages_hi_IN.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=उपयोगकर्ता को लॉगिन पर उपयोगकर्ता नाम/पासवर्ड बदलने के लिए मजबूर करें
 adminUserSettings.submit=उपयोगकर्ता को सहेजें
 adminUserSettings.changeUserRole=यूज़र की भूमिका बदलें
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
