--- a/src/main/resources/messages_id_ID.properties
+++ b/src/main/resources/messages_id_ID.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Memaksa pengguna untuk mengubah nama pengguna/kata sandi saat masuk
 adminUserSettings.submit=Simpan Pengguna
 adminUserSettings.changeUserRole=Ubah Peran Pengguna
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
