--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=API utente interna
 adminUserSettings.forceChange=Forza l'utente a cambiare nome username/password all'accesso
 adminUserSettings.submit=Salva utente
 adminUserSettings.changeUserRole=Cambia il ruolo dell'utente
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
