--- a/src/main/resources/messages_ko_KR.properties
+++ b/src/main/resources/messages_ko_KR.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=내부 API 사용자
 adminUserSettings.forceChange=다음 로그인 때 사용자명과 비밀번호를 변경하도록 강제
 adminUserSettings.submit=사용자 저장
 adminUserSettings.changeUserRole=사용자의 역할 변경
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
