--- a/src/main/resources/messages_nl_NL.properties
+++ b/src/main/resources/messages_nl_NL.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Forceer gebruiker om gebruikersnaam/wachtwoord te wijzigen bij inloggen
 adminUserSettings.submit=Gebruiker opslaan
 adminUserSettings.changeUserRole=De rol van de gebruiker wijzigen
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
