--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Force user to change password on login
 adminUserSettings.submit=Save User
 adminUserSettings.changeUserRole=Alterar Função de Usuário
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
