--- a/src/main/resources/messages_ru_RU.properties
+++ b/src/main/resources/messages_ru_RU.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Внутренний пользователь 
 adminUserSettings.forceChange=Просить пользователя изменить пароль при входе в систему
 adminUserSettings.submit=Сохранить пользователя
 adminUserSettings.changeUserRole=Изменить роль пользователя
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
