--- a/src/main/resources/messages_sr_LATN_RS.properties
+++ b/src/main/resources/messages_sr_LATN_RS.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Prisili korisnika da promeni korisničko ime/lozinku pri prijavi
 adminUserSettings.submit=Sačuvaj korisnika
 adminUserSettings.changeUserRole=Promenite ulogu korisnika
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
