--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Dahili API Kullanıcısı
 adminUserSettings.forceChange=Kullanıcının girişte kullanıcı adı/şifre değiştirmesini zorla
 adminUserSettings.submit=Kullanıcıyı Kaydet
 adminUserSettings.changeUserRole=Kullanıcı rolünü değiştir
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
