--- a/src/main/resources/messages_uk_UA.properties
+++ b/src/main/resources/messages_uk_UA.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Внутрішній користувач API
 adminUserSettings.forceChange=Примусити користувача змінити пароль при вході в систему
 adminUserSettings.submit=Зберегти користувача
 adminUserSettings.changeUserRole=Змінити роль користувача
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
