--- a/src/main/resources/messages_zh_CN.properties
+++ b/src/main/resources/messages_zh_CN.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=内部API用户
 adminUserSettings.forceChange=强制用户在登录时更改用户名/密码
 adminUserSettings.submit=保存用户
 adminUserSettings.changeUserRole=更改用户角色
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
