--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=內部 API 使用者
 adminUserSettings.forceChange=強制使用者在登入時修改使用者名稱/密碼
 adminUserSettings.submit=儲存
 adminUserSettings.changeUserRole=更改使用者身份
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
