--- a/src/main/resources/messages_ca_CA.properties
+++ b/src/main/resources/messages_ca_CA.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Force user to change password on login
 adminUserSettings.submit=Desar Usuari
 adminUserSettings.changeUserRole=Canvia el rol de l'usuari
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
