--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Force user to change password on login
 adminUserSettings.submit=Save User
 adminUserSettings.changeUserRole=Change User's Role
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
