--- a/src/main/resources/messages_hu_HU.properties
+++ b/src/main/resources/messages_hu_HU.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=Internal API User
 adminUserSettings.forceChange=Kényszerítse a felhasználót a felhasználónév/jelszó megváltoztatására bejelentkezéskor
 adminUserSettings.submit=Felhasználó mentése
 adminUserSettings.changeUserRole=Felhasználó szerepkörének módosítása
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
