--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -176,6 +176,7 @@ adminUserSettings.internalApiUser=内部APIユーザー
 adminUserSettings.forceChange=ログイン時にユーザー名/パスワードを強制的に変更する
 adminUserSettings.submit=ユーザーの保存
 adminUserSettings.changeUserRole=ユーザーの役割を変更する
+adminUserSettings.authenticated=Authenticated
 
 #############
 # HOME-PAGE #
