--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -54,11 +54,13 @@ notAuthenticatedMessage=Benutzer nicht authentifiziert.
 userNotFoundMessage=Benutzer nicht gefunden.
 incorrectPasswordMessage=Das Passwort ist falsch.
 usernameExistsMessage=Neuer Benutzername existiert bereits.
-invalidUsernameMessage=Ungültiger Benutzername. Der Benutzername darf nur Buchstaben und Zahlen enthalten.
+invalidUsernameMessage=Ungültiger Benutzername. Der Benutzername darf nur Buchstaben und Zahlen enthalten oder muss eine gültige E-Mail-Adresse sein.
 deleteCurrentUserMessage=Der aktuell angemeldete Benutzer kann nicht gelöscht werden.
 deleteUsernameExistsMessage=Der Benutzername existiert nicht und kann nicht gelöscht werden.
 downgradeCurrentUserMessage=Die Rolle des aktuellen Benutzers kann nicht herabgestuft werden
 downgradeCurrentUserLongMessage=Die Rolle des aktuellen Benutzers kann nicht herabgestuft werden. Daher wird der aktuelle Benutzer nicht angezeigt.
+userAlreadyExistsMessage=OAuth2: User already exists.
+usernameExistsMessage
 error=Fehler
 oops=Hoppla!
 help=Hilfe
