--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Utilisateur non authentifié.
 userNotFoundMessage=Utilisateur non trouvé.
 incorrectPasswordMessage=Le mot de passe actuel est incorrect.
 usernameExistsMessage=Le nouveau nom d’utilisateur existe déjà.
-invalidUsernameMessage=Nom d’utilisateur invalide, le nom d’utilisateur ne peut contenir que des chiffres et des lettres.
+invalidUsernameMessage=Nom d’utilisateur invalide, le nom d’utilisateur doit contenir uniquement des lettres et des chiffres, ou doit être une adresse e-mail valide.
 deleteCurrentUserMessage=Impossible de supprimer l’utilisateur actuellement connecté.
 deleteUsernameExistsMessage=Le nom d’utilisateur n’existe pas et ne peut pas être supprimé.
 downgradeCurrentUserMessage=Impossible de rétrograder le rôle de l'utilisateur actuel
 downgradeCurrentUserLongMessage=Impossible de rétrograder le rôle de l'utilisateur actuel. Par conséquent, l'utilisateur actuel ne sera pas affiché.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Erreur
 oops=Oups !
 help=Aide
