--- a/src/main/resources/messages_id_ID.properties
+++ b/src/main/resources/messages_id_ID.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Pengguna tidak ter-autentikasi.
 userNotFoundMessage=Pengguna tidak ditemukan.
 incorrectPasswordMessage=Kata sandi saat ini salah.
 usernameExistsMessage=Nama pengguna baru sudah ada.
-invalidUsernameMessage=Invalid username, Username must only contain alphabet characters and numbers.
+invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Tidak dapat menurunkan peran pengguna saat ini
 downgradeCurrentUserLongMessage=Tidak dapat menurunkan peran pengguna saat ini. Oleh karena itu, pengguna saat ini tidak akan ditampilkan.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Error
 oops=Oops!
 help=Help
