--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Kullanıcı doğrulanmadı.
 userNotFoundMessage=Kullanıcı bulunamadı.
 incorrectPasswordMessage=Mevcut şifre yanlış.
 usernameExistsMessage=Yeni Kullanıcı Adı zaten var.
-invalidUsernameMessage=Geçersiz kullanıcı adı, Kullanıcı adı yalnızca alfabe karakterleri ve sayılar içermelidir.
+invalidUsernameMessage=Geçersiz kullanıcı adı, kullanıcı adı yalnızca harf ve rakamlardan oluşmalı veya geçerli bir e-posta adresi olmalıdır.
 deleteCurrentUserMessage=Şu anda oturum açmış olan kullanıcı silinemiyor.
 deleteUsernameExistsMessage=Kullanıcı adı mevcut değil ve silinemez.
 downgradeCurrentUserMessage=Mevcut kullanıcının rolü düşürülemiyor
 downgradeCurrentUserLongMessage=Mevcut kullanıcının rolü düşürülemiyor. Bu nedenle, mevcut kullanıcı gösterilmeyecektir.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Hata
 oops=Tüh!
 help=Yardım
