--- a/src/main/resources/messages_zh_CN.properties
+++ b/src/main/resources/messages_zh_CN.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=用户未经过身份验证。
 userNotFoundMessage=未找到用户。
 incorrectPasswordMessage=当前密码不正确。
 usernameExistsMessage=新用户名已存在。
-invalidUsernameMessage=用户名无效，用户名只能由字母字符和数字组成。
+invalidUsernameMessage=用户名无效，用户名只能包含字母和数字，或者必须是有效的电子邮件地址。
 deleteCurrentUserMessage=无法删除当前登录的用户。
 deleteUsernameExistsMessage=用户名不存在，无法删除。
 downgradeCurrentUserMessage=无法降级当前用户的角色
 downgradeCurrentUserLongMessage=无法降级当前用户的角色。因此，当前用户将不会显示。
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=错误
 oops=哎呀！
 help=帮助
