--- a/src/main/resources/messages_el_GR.properties
+++ b/src/main/resources/messages_el_GR.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Ο χρήστης δεν έχει αυθεντικοπο
 userNotFoundMessage=Ο χρήστης δεν βρέθηκε.
 incorrectPasswordMessage=Ο τρέχων κωδικός πρόσβασης είναι λανθασμένος.
 usernameExistsMessage=Το νέο όνομα χρήστη υπάρχει ήδη.
-invalidUsernameMessage=Μη έγκυρο όνομα χρήστη, το όνομα χρήστη πρέπει να περιέχει μόνο αλφαβητικούς χαρακτήρες και αριθμούς.
+invalidUsernameMessage=Μη έγκυρο όνομα χρήστη, το όνομα χρήστη πρέπει να περιέχει μόνο γράμματα και αριθμούς ή πρέπει να είναι έγκυρη διεύθυνση email.
 deleteCurrentUserMessage=Δεν είναι δυνατή η διαγραφή του τρέχοντος συνδεδεμένου χρήστη.
 deleteUsernameExistsMessage=Το όνομα χρήστη δεν υπάρχει και δεν μπορεί να διαγραφεί.
 downgradeCurrentUserMessage=Δεν είναι δυνατή η υποβάθμιση του ρόλου του τρέχοντος χρήστη
 downgradeCurrentUserLongMessage=Δεν είναι δυνατή η υποβάθμιση του ρόλου του τρέχοντος χρήστη. Ως εκ τούτου, ο τρέχων χρήστης δεν θα εμφανίζεται.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Σφάλμα
 oops=Ωχ!
 help=Βοήθεια
