--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Usuario no autentificado.
 userNotFoundMessage=Usuario no encontrado.
 incorrectPasswordMessage=La contraseña actual no es correcta.
 usernameExistsMessage=El nuevo nombre de usuario está en uso.
-invalidUsernameMessage=Nombre de usuario no válido, El nombre de ususario debe contener únicamente números y caracteres alfabéticos.
+invalidUsernameMessage=Nombre de usuario no válido, el nombre de usuario debe contener solo letras y números, o debe ser una dirección de correo electrónico válida.
 deleteCurrentUserMessage=No puede eliminar el usuario que tiene la sesión actualmente en uso.
 deleteUsernameExistsMessage=El usuario no existe y no puede eliminarse.
 downgradeCurrentUserMessage=No se puede degradar el rol del usuario actual
 downgradeCurrentUserLongMessage=No se puede degradar el rol del usuario actual. Por lo tanto, el usuario actual no se mostrará.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Error
 oops=Ups!
 help=Help
