--- a/src/main/resources/messages_eu_ES.properties
+++ b/src/main/resources/messages_eu_ES.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=User not authenticated.
 userNotFoundMessage=User not found.
 incorrectPasswordMessage=Current password is incorrect.
 usernameExistsMessage=New Username already exists.
-invalidUsernameMessage=Invalid username, Username must only contain alphabet characters and numbers.
+invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Ezin da uneko erabiltzailearen rola jaitsi
 downgradeCurrentUserLongMessage=Ezin da uneko erabiltzailearen rola jaitsi. Beraz, oraingo erabiltzailea ez da erakutsiko.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Error
 oops=Oops!
 help=Help
