--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Utente non autenticato.
 userNotFoundMessage=Utente non trovato.
 incorrectPasswordMessage=La password attuale non è corretta.
 usernameExistsMessage=Il nuovo nome utente esiste già.
-invalidUsernameMessage=Nome utente non valido, il nome utente deve contenere solo caratteri alfabetici e numeri.
+invalidUsernameMessage=Nome utente non valido, il nome utente deve contenere solo lettere e numeri oppure deve essere un indirizzo email valido.
 deleteCurrentUserMessage=Impossibile eliminare l'utente attualmente connesso.
 deleteUsernameExistsMessage=Il nome utente non esiste e non può essere eliminato.
 downgradeCurrentUserMessage=Impossibile declassare il ruolo dell'utente corrente
 downgradeCurrentUserLongMessage=Impossibile declassare il ruolo dell'utente corrente. Pertanto, l'utente corrente non verrà visualizzato.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Errore
 oops=Oops!
 help=Aiuto
