--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=ユーザーが認証されていません。
 userNotFoundMessage=ユーザーが見つかりません。
 incorrectPasswordMessage=現在のパスワードが正しくありません。
 usernameExistsMessage=新しいユーザー名はすでに存在します。
-invalidUsernameMessage=ユーザー名が無効です。ユーザー名にはアルファベットと数字のみを使用してください。
+invalidUsernameMessage=ユーザー名が無効です。ユーザー名には文字と数字のみを含めるか、有効な電子メール アドレスを使用する必要があります。
 deleteCurrentUserMessage=現在ログインしているユーザーは削除できません。
 deleteUsernameExistsMessage=そのユーザー名は存在しないため削除できません。
 downgradeCurrentUserMessage=現在のユーザーの役割をダウングレードできません
 downgradeCurrentUserLongMessage=現在のユーザーの役割をダウングレードできません。したがって、現在のユーザーは表示されません。
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=エラー
 oops=おっと！
 help=ヘルプ
