--- a/src/main/resources/messages_nl_NL.properties
+++ b/src/main/resources/messages_nl_NL.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Gebruiker niet ingelogd.
 userNotFoundMessage=Gebruiker niet gevonden.
 incorrectPasswordMessage=Huidige wachtwoord is onjuist.
 usernameExistsMessage=Nieuwe gebruikersnaam bestaat al.
-invalidUsernameMessage=Invalid username, Username must only contain alphabet characters and numbers.
+invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Kan de rol van de huidige gebruiker niet downgraden
 downgradeCurrentUserLongMessage=Kan de rol van de huidige gebruiker niet downgraden. Huidige gebruiker wordt dus niet weergegeven.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Error
 oops=Oops!
 help=Help
