--- a/src/main/resources/messages_pt_PT.properties
+++ b/src/main/resources/messages_pt_PT.properties
@@ -54,11 +54,12 @@ notAuthenticatedMessage=Utilizador não autenticado.
 userNotFoundMessage=Utilizador inexistente.
 incorrectPasswordMessage=Senha incorreta.
 usernameExistsMessage=Esse utilizador já existe.
-invalidUsernameMessage=Invalid username, Username must only contain alphabet characters and numbers.
+invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Não é possível fazer downgrade da função do utilizador atual
 downgradeCurrentUserLongMessage=Não é possível fazer downgrade da função do utilizador atual. Portanto, o utilizador atual não será mostrado.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Error
 oops=Oops!
 help=Help
