--- a/src/main/resources/messages_en_GB.properties
+++ b/src/main/resources/messages_en_GB.properties
@@ -59,6 +59,7 @@ deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Cannot downgrade current user's role
 downgradeCurrentUserLongMessage=Cannot downgrade current user's role. Hence, current user will not be shown.
+userAlreadyExistsMessage=OAuth2: User already exists.
 error=Error
 oops=Oops!
 help=Help
