--- a/src/main/resources/messages_ja_JP.properties
+++ b/src/main/resources/messages_ja_JP.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=ユーザーが認証されていません。
 userNotFoundMessage=ユーザーが見つかりません。
 incorrectPasswordMessage=現在のパスワードが正しくありません。
 usernameExistsMessage=新しいユーザー名はすでに存在します。
-invalidUsernameMessage=ユーザー名が無効です。ユーザー名には文字と数字のみを含めるか、有効な電子メール アドレスを使用する必要があります。
+invalidUsernameMessage=ユーザー名が無効です。ユーザー名には文字、数字、およびそれに続く特殊文字 @._+- のみを含めることができます。または、有効な電子メール アドレスである必要があります。
 deleteCurrentUserMessage=現在ログインしているユーザーは削除できません。
 deleteUsernameExistsMessage=そのユーザー名は存在しないため削除できません。
 downgradeCurrentUserMessage=現在のユーザーの役割をダウングレードできません
