--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Kullanıcı doğrulanmadı.
 userNotFoundMessage=Kullanıcı bulunamadı.
 incorrectPasswordMessage=Mevcut şifre yanlış.
 usernameExistsMessage=Yeni Kullanıcı Adı zaten var.
-invalidUsernameMessage=Geçersiz kullanıcı adı, kullanıcı adı yalnızca harf ve rakamlardan oluşmalı veya geçerli bir e-posta adresi olmalıdır.
+invalidUsernameMessage=Geçersiz kullanıcı adı, kullanıcı adı yalnızca harf, rakam ve aşağıdaki özel karakterleri @._+- içerebilir veya geçerli bir e-posta adresi olmalıdır.
 deleteCurrentUserMessage=Şu anda oturum açmış olan kullanıcı silinemiyor.
 deleteUsernameExistsMessage=Kullanıcı adı mevcut değil ve silinemez.
 downgradeCurrentUserMessage=Mevcut kullanıcının rolü düşürülemiyor
