--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=使用者未認證。
 userNotFoundMessage=找不到使用者。
 incorrectPasswordMessage=目前密碼不正確。
 usernameExistsMessage=新使用者名稱已存在。
-invalidUsernameMessage=使用者名稱無效，使用者名稱只能包含字母和數字，或必須是有效的電子郵件地址。
+invalidUsernameMessage=使用者名稱無效，使用者名稱只能包含字母、數字和以下特殊字元@._+- 或必須是有效的電子郵件地址。
 deleteCurrentUserMessage=無法刪除目前登錄的使用者。
 deleteUsernameExistsMessage=使用者名不存在，無法刪除。
 downgradeCurrentUserMessage=無法降級目前使用者的角色
