--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Usuario no autentificado.
 userNotFoundMessage=Usuario no encontrado.
 incorrectPasswordMessage=La contraseña actual no es correcta.
 usernameExistsMessage=El nuevo nombre de usuario está en uso.
-invalidUsernameMessage=Nombre de usuario no válido, el nombre de usuario debe contener solo letras y números, o debe ser una dirección de correo electrónico válida.
+invalidUsernameMessage=Nombre de usuario no válido, el nombre de usuario solo puede contener letras, números y los siguientes caracteres especiales @._+- o debe ser una dirección de correo electrónico válida.
 deleteCurrentUserMessage=No puede eliminar el usuario que tiene la sesión actualmente en uso.
 deleteUsernameExistsMessage=El usuario no existe y no puede eliminarse.
 downgradeCurrentUserMessage=No se puede degradar el rol del usuario actual
