--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Utilisateur non authentifié.
 userNotFoundMessage=Utilisateur non trouvé.
 incorrectPasswordMessage=Le mot de passe actuel est incorrect.
 usernameExistsMessage=Le nouveau nom d’utilisateur existe déjà.
-invalidUsernameMessage=Nom d’utilisateur invalide, le nom d’utilisateur doit contenir uniquement des lettres et des chiffres, ou doit être une adresse e-mail valide.
+invalidUsernameMessage=Nom d’utilisateur invalide, le nom d’utilisateur ne peut contenir que des lettres, des chiffres et les caractères spéciaux suivants @._+- ou doit être une adresse e-mail valide.
 deleteCurrentUserMessage=Impossible de supprimer l’utilisateur actuellement connecté.
 deleteUsernameExistsMessage=Le nom d’utilisateur n’existe pas et ne peut pas être supprimé.
 downgradeCurrentUserMessage=Impossible de rétrograder le rôle de l'utilisateur actuel
