--- a/src/main/resources/messages_hi_IN.properties
+++ b/src/main/resources/messages_hi_IN.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=उपयोगकर्ता प्रमाणित 
 userNotFoundMessage=उपयोगकर्ता नहीं मिला।
 incorrectPasswordMessage=वर्तमान पासवर्ड गलत है।
 usernameExistsMessage=नया उपयोगकर्ता नाम पहले से मौजूद है।
-invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
+invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=मौजूदा यूज़र की भूमिका को डाउनग्रेड नहीं किया जा सकता
