--- a/src/main/resources/messages_hu_HU.properties
+++ b/src/main/resources/messages_hu_HU.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Felhasználó nincs hitelesítve.
 userNotFoundMessage=A felhasználó nem található.
 incorrectPasswordMessage=A jelenlegi jelszó helytelen.
 usernameExistsMessage=Az új felhasználónév már létezik.
-invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
+invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=A jelenlegi felhasználó szerepkörét nem lehet visszaminősíteni
