--- a/src/main/resources/messages_id_ID.properties
+++ b/src/main/resources/messages_id_ID.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Pengguna tidak ter-autentikasi.
 userNotFoundMessage=Pengguna tidak ditemukan.
 incorrectPasswordMessage=Kata sandi saat ini salah.
 usernameExistsMessage=Nama pengguna baru sudah ada.
-invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
+invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Tidak dapat menurunkan peran pengguna saat ini
