--- a/src/main/resources/messages_nl_NL.properties
+++ b/src/main/resources/messages_nl_NL.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Gebruiker niet ingelogd.
 userNotFoundMessage=Gebruiker niet gevonden.
 incorrectPasswordMessage=Huidige wachtwoord is onjuist.
 usernameExistsMessage=Nieuwe gebruikersnaam bestaat al.
-invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
+invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Kan de rol van de huidige gebruiker niet downgraden
