--- a/src/main/resources/messages_pt_PT.properties
+++ b/src/main/resources/messages_pt_PT.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Utilizador não autenticado.
 userNotFoundMessage=Utilizador inexistente.
 incorrectPasswordMessage=Senha incorreta.
 usernameExistsMessage=Esse utilizador já existe.
-invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
+invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Não é possível fazer downgrade da função do utilizador atual
