--- a/src/main/resources/messages_sr_LATN_RS.properties
+++ b/src/main/resources/messages_sr_LATN_RS.properties
@@ -54,7 +54,7 @@ notAuthenticatedMessage=Korisnik nije autentifikovan.
 userNotFoundMessage=Korisnik nije pronađen.
 incorrectPasswordMessage=Trenutna šifra je netačna.
 usernameExistsMessage=Novi korisnik već postoji
-invalidUsernameMessage=Invalid username, username must contain only letters and numbers, or must be a valid email address.
+invalidUsernameMessage=Invalid username, username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Nije moguće degradirati ulogu trenutnog korisnika
