--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Der aktuell angemeldete Benutzer kann nicht gelöscht w
 deleteUsernameExistsMessage=Der Benutzername existiert nicht und kann nicht gelöscht werden.
 downgradeCurrentUserMessage=Die Rolle des aktuellen Benutzers kann nicht herabgestuft werden
 downgradeCurrentUserLongMessage=Die Rolle des aktuellen Benutzers kann nicht herabgestuft werden. Daher wird der aktuelle Benutzer nicht angezeigt.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Fehler
 oops=Hoppla!
 help=Hilfe
@@ -165,7 +166,7 @@ adminUserSettings.header=Administrator-Benutzerkontrolle
 adminUserSettings.admin=Administrator
 adminUserSettings.user=Benutzer
 adminUserSettings.addUser=Neuen Benutzer hinzufügen
-adminUserSettings.usernameInfo=Der Benutzername darf nur Buchstaben und Zahlen enthalten, keine Leerzeichen oder Sonderzeichen.
+adminUserSettings.usernameInfo=Der Benutzername darf nur Buchstaben, Zahlen und die folgenden Sonderzeichen @._+- enthalten oder muss eine gültige E-Mail-Adresse sein.
 adminUserSettings.roles=Rollen
 adminUserSettings.role=Rolle
 adminUserSettings.actions=Aktion
