--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=No puede eliminar el usuario que tiene la sesión actua
 deleteUsernameExistsMessage=El usuario no existe y no puede eliminarse.
 downgradeCurrentUserMessage=No se puede degradar el rol del usuario actual
 downgradeCurrentUserLongMessage=No se puede degradar el rol del usuario actual. Por lo tanto, el usuario actual no se mostrará.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Error
 oops=Ups!
 help=Help
@@ -165,7 +166,7 @@ adminUserSettings.header=Configuración de control de usuario administrador
 adminUserSettings.admin=Administrador
 adminUserSettings.user=Usuario
 adminUserSettings.addUser=Añadir Nuevo Usuario
-adminUserSettings.usernameInfo=El nombrede usuario debe contener únicamente letras y números, no espacios ni caracteres especiales.
+adminUserSettings.usernameInfo=El nombre de usuario solo puede contener letras, números y los siguientes caracteres especiales @._+- o debe ser una dirección de correo electrónico válida.
 adminUserSettings.roles=Roles
 adminUserSettings.role=Rol
 adminUserSettings.actions=Acciones
