--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Impossible de supprimer l’utilisateur actuellement co
 deleteUsernameExistsMessage=Le nom d’utilisateur n’existe pas et ne peut pas être supprimé.
 downgradeCurrentUserMessage=Impossible de rétrograder le rôle de l'utilisateur actuel
 downgradeCurrentUserLongMessage=Impossible de rétrograder le rôle de l'utilisateur actuel. Par conséquent, l'utilisateur actuel ne sera pas affiché.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Erreur
 oops=Oups !
 help=Aide
@@ -165,7 +166,7 @@ adminUserSettings.header=Administration des paramètres des utilisateurs
 adminUserSettings.admin=Administateur
 adminUserSettings.user=Utilisateur
 adminUserSettings.addUser=Ajouter un utilisateur
-adminUserSettings.usernameInfo=Le nom d’utilisateur ne doit contenir que des lettres et des chiffres, sans espaces ni caractères spéciaux.
+adminUserSettings.usernameInfo=Le nom d'utilisateur ne peut contenir que des lettres, des chiffres et les caractères spéciaux suivants @._+- ou doit être une adresse e-mail valide.
 adminUserSettings.roles=Rôles
 adminUserSettings.role=Rôle
 adminUserSettings.actions=Actions
