--- a/src/main/resources/messages_id_ID.properties
+++ b/src/main/resources/messages_id_ID.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Tidak dapat menurunkan peran pengguna saat ini
 downgradeCurrentUserLongMessage=Tidak dapat menurunkan peran pengguna saat ini. Oleh karena itu, pengguna saat ini tidak akan ditampilkan.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Error
 oops=Oops!
 help=Help
@@ -165,7 +166,7 @@ adminUserSettings.header=Pengaturan Kontrol Admin
 adminUserSettings.admin=Admin
 adminUserSettings.user=Pengguna
 adminUserSettings.addUser=Tambahkan Pengguna Baru
-adminUserSettings.usernameInfo=Username must only contain letters and numbers, no spaces or special characters.
+adminUserSettings.usernameInfo=Username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 adminUserSettings.roles=Peran
 adminUserSettings.role=Peran
 adminUserSettings.actions=Tindakan
