--- a/src/main/resources/messages_zh_TW.properties
+++ b/src/main/resources/messages_zh_TW.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=無法刪除目前登錄的使用者。
 deleteUsernameExistsMessage=使用者名不存在，無法刪除。
 downgradeCurrentUserMessage=無法降級目前使用者的角色
 downgradeCurrentUserLongMessage=無法降級目前使用者的角色。因此，不會顯示目前的使用者。
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=錯誤
 oops=哎呀！
 help=幫助
@@ -165,7 +166,7 @@ adminUserSettings.header=管理使用者控制設定
 adminUserSettings.admin=管理員
 adminUserSettings.user=使用者
 adminUserSettings.addUser=新增使用者
-adminUserSettings.usernameInfo=使用者名只能包含字母和數位，不能包含空格或特殊字元。
+adminUserSettings.usernameInfo=使用者名稱只能包含字母、數字和以下特殊字元@._+-，或必須是有效的電子郵件地址。
 adminUserSettings.roles=角色
 adminUserSettings.role=角色
 adminUserSettings.actions=操作
