--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Cannot downgrade current user's role
 downgradeCurrentUserLongMessage=Cannot downgrade current user's role. Hence, current user will not be shown.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Error
 oops=Oops!
 help=Help
@@ -165,7 +166,7 @@ adminUserSettings.header=Admin User Control Settings
 adminUserSettings.admin=Admin
 adminUserSettings.user=User
 adminUserSettings.addUser=Add New User
-adminUserSettings.usernameInfo=Username must only contain letters and numbers, no spaces or special characters.
+adminUserSettings.usernameInfo=Username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 adminUserSettings.roles=Roles
 adminUserSettings.role=Role
 adminUserSettings.actions=Actions
