--- a/src/main/resources/messages_eu_ES.properties
+++ b/src/main/resources/messages_eu_ES.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Ezin da uneko erabiltzailearen rola jaitsi
 downgradeCurrentUserLongMessage=Ezin da uneko erabiltzailearen rola jaitsi. Beraz, oraingo erabiltzailea ez da erakutsiko.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Error
 oops=Oops!
 help=Help
@@ -165,7 +166,7 @@ adminUserSettings.header=Admin Erabiltzailearen Ezarpenen Kontrolak
 adminUserSettings.admin=Admin
 adminUserSettings.user=Erabiltzaile
 adminUserSettings.addUser=Erabiltzaile berria
-adminUserSettings.usernameInfo=Username must only contain letters and numbers, no spaces or special characters.
+adminUserSettings.usernameInfo=Username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 adminUserSettings.roles=Rolak
 adminUserSettings.role=Rol
 adminUserSettings.actions=Ekintzak
