--- a/src/main/resources/messages_hi_IN.properties
+++ b/src/main/resources/messages_hi_IN.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=मौजूदा यूज़र की भूमिका को डाउनग्रेड नहीं किया जा सकता
 downgradeCurrentUserLongMessage=मौजूदा यूज़र की भूमिका को डाउनग्रेड नहीं किया जा सकता। इसलिए, वर्तमान उपयोगकर्ता को नहीं दिखाया जाएगा।
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Error
 oops=Oops!
 help=Help
@@ -165,7 +166,7 @@ adminUserSettings.header=व्यवस्थापक उपयोगकर्
 adminUserSettings.admin=व्यवस्थापक
 adminUserSettings.user=उपयोगकर्ता
 adminUserSettings.addUser=नया उपयोगकर्ता जोड़ें
-adminUserSettings.usernameInfo=Username must only contain letters and numbers, no spaces or special characters.
+adminUserSettings.usernameInfo=Username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 adminUserSettings.roles=रोल्स
 adminUserSettings.role=रोल
 adminUserSettings.actions=क्रियाएँ
