--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Impossibile eliminare l'utente attualmente connesso.
 deleteUsernameExistsMessage=Il nome utente non esiste e non può essere eliminato.
 downgradeCurrentUserMessage=Impossibile declassare il ruolo dell'utente corrente
 downgradeCurrentUserLongMessage=Impossibile declassare il ruolo dell'utente corrente. Pertanto, l'utente corrente non verrà visualizzato.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Errore
 oops=Oops!
 help=Aiuto
@@ -165,7 +166,7 @@ adminUserSettings.header=Impostazioni di controllo utente amministratore
 adminUserSettings.admin=Amministratore
 adminUserSettings.user=Utente
 adminUserSettings.addUser=Aggiungi un nuovo Utente
-adminUserSettings.usernameInfo=Il nome utente deve contenere solo lettere e numeri, senza spazi o caratteri speciali.
+adminUserSettings.usernameInfo=Il nome utente può contenere solo lettere, numeri e i seguenti caratteri speciali @._+- oppure deve essere un indirizzo email valido.
 adminUserSettings.roles=Ruoli
 adminUserSettings.role=Ruolo
 adminUserSettings.actions=Azioni
