--- a/src/main/resources/messages_nl_NL.properties
+++ b/src/main/resources/messages_nl_NL.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Cannot delete currently logged in user.
 deleteUsernameExistsMessage=The username does not exist and cannot be deleted.
 downgradeCurrentUserMessage=Kan de rol van de huidige gebruiker niet downgraden
 downgradeCurrentUserLongMessage=Kan de rol van de huidige gebruiker niet downgraden. Huidige gebruiker wordt dus niet weergegeven.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Error
 oops=Oops!
 help=Help
@@ -165,7 +166,7 @@ adminUserSettings.header=Beheer gebruikers
 adminUserSettings.admin=Beheerder
 adminUserSettings.user=Gebruiker
 adminUserSettings.addUser=Voeg nieuwe gebruiker toe
-adminUserSettings.usernameInfo=Username must only contain letters and numbers, no spaces or special characters.
+adminUserSettings.usernameInfo=Username can only contain letters, numbers and the following special characters @._+- or must be a valid email address.
 adminUserSettings.roles=Rollen
 adminUserSettings.role=Rol
 adminUserSettings.actions=Acties
