--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=Şu anda oturum açmış olan kullanıcı silinemiyor.
 deleteUsernameExistsMessage=Kullanıcı adı mevcut değil ve silinemez.
 downgradeCurrentUserMessage=Mevcut kullanıcının rolü düşürülemiyor
 downgradeCurrentUserLongMessage=Mevcut kullanıcının rolü düşürülemiyor. Bu nedenle, mevcut kullanıcı gösterilmeyecektir.
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=Hata
 oops=Tüh!
 help=Yardım
@@ -165,7 +166,7 @@ adminUserSettings.header=Yönetici Kullanıcı Kontrol Ayarları
 adminUserSettings.admin=Yönetici
 adminUserSettings.user=Kullanıcı
 adminUserSettings.addUser=Yeni Kullanıcı Ekle
-adminUserSettings.usernameInfo=Kullanıcı adı yalnızca harf ve rakamlardan oluşmalı, boşluk veya özel karakter içermemelidir.
+adminUserSettings.usernameInfo=Kullanıcı adı yalnızca harf, rakam ve aşağıdaki özel karakterleri @._+- içerebilir veya geçerli bir e-posta adresi olmalıdır.
 adminUserSettings.roles=Roller
 adminUserSettings.role=Rol
 adminUserSettings.actions=Eylemler
