--- a/src/main/resources/messages_zh_CN.properties
+++ b/src/main/resources/messages_zh_CN.properties
@@ -59,7 +59,8 @@ deleteCurrentUserMessage=无法删除当前登录的用户。
 deleteUsernameExistsMessage=用户名不存在，无法删除。
 downgradeCurrentUserMessage=无法降级当前用户的角色
 downgradeCurrentUserLongMessage=无法降级当前用户的角色。因此，当前用户将不会显示。
-userAlreadyExistsMessage=OAuth2: User already exists.
+userAlreadyExistsOAuthMessage=The user already exists as an OAuth2 user.
+userAlreadyExistsWebMessage=The user already exists as an web user.
 error=错误
 oops=哎呀！
 help=帮助
@@ -165,7 +166,7 @@ adminUserSettings.header=管理员用户控制设置
 adminUserSettings.admin=管理员
 adminUserSettings.user=用户
 adminUserSettings.addUser=添加新用户
-adminUserSettings.usernameInfo=用户名只能由字母和数字组成，不能包含空格或特殊字符。
+adminUserSettings.usernameInfo=用户名只能包含字母、数字和以下特殊字符@._+-，或者必须是有效的电子邮件地址。
 adminUserSettings.roles=角色
 adminUserSettings.role=角色
 adminUserSettings.actions=操作
