--- a/src/main/resources/messages_it_IT.properties
+++ b/src/main/resources/messages_it_IT.properties
@@ -35,7 +35,7 @@ sizes.large=Largo
 sizes.x-large=Extra-Large
 error.pdfPassword=Il documento PDF è protetto da password e la password non è stata fornita oppure non era corretta
 delete=Elimina
-username=Username
+username=Nome utente
 password=Password
 welcome=Benvenuto
 property=Proprietà
@@ -86,7 +86,7 @@ pipeline.defaultOption=Personalizzato
 pipeline.submitButton=Invia
 pipeline.help=Aiuto sulla pipeline
 pipeline.scanHelp=Aiuto per la scansione delle cartelle
-pipeline.deletePrompt=Are you sure you want to delete pipeline
+pipeline.deletePrompt=Sei sicuro di voler eliminare la pipeline?
 
 ######################
 #  Pipeline Options  #
@@ -116,7 +116,7 @@ navbar.multiTool=Strumenti multipli
 navbar.sections.organize=Organizza
 navbar.sections.convertTo=Converti in PDF
 navbar.sections.convertFrom=Converti da PDF
-navbar.sections.security=Firma Firma & Sicurezza
+navbar.sections.security=Firma & Sicurezza
 navbar.sections.advance=Avanzate
 navbar.sections.edit=Visualizza & Modifica
 
@@ -191,6 +191,23 @@ adminUserSettings.submit=Salva utente
 adminUserSettings.changeUserRole=Cambia il ruolo dell'utente
 adminUserSettings.authenticated=Autenticato
 
+
+database.title=Importazione/Esportazione database
+database.header=Importazione/esportazione database
+database.fileName=Nome file
+database.creationDate=Data di creazione
+database.fileSize=Dimensione
+database.deleteBackupFile=Elimina file di backup
+database.importBackupFile=Importa file di backup
+database.downloadBackupFile=Scarica il file di backup
+database.info_1=Quando si importano i dati, è fondamentale garantire la struttura corretta. Se non sei sicuro di quello che stai facendo, chiedi consiglio e supporto a un professionista. Un errore nella struttura può causare malfunzionamenti dell'applicazione, fino alla completa impossibilità di eseguire l'applicazione.
+database.info_2=Il nome del file non ha importanza durante il caricamento. Verrà rinominato in seguito per seguire il formato backup_user__yyyyMMddHHmm.sql,garantendo una convenzione di denominazione coerente.
+database.submit=Importa Backup
+database.importIntoDatabaseSuccessed=L'importazione nel database è avvenuta con successo
+database.fileNotFound=File non trovato
+database.fileNullOrEmpty=Il file non deve essere nullo o vuoto
+database.failedImportFile=Importazione file non riuscita
+
 #############
 # HOME-PAGE #
 #############
@@ -234,7 +251,7 @@ pdfOrganiser.tags=duplex,pari,dispari,ordinamento,spostamento
 
 home.addImage.title=Aggiungi Immagine
 home.addImage.desc=Aggiungi un'immagine in un punto specifico del PDF (Lavori in corso)
-addImage.tags=img,jpg,immagine,photo
+addImage.tags=img,jpg,immagine,foto
 
 home.watermark.title=Aggiungi Filigrana
 home.watermark.desc=Aggiungi una filigrana al tuo PDF.
@@ -689,6 +706,8 @@ removeAnnotations.submit=Rimuovi
 #compare
 compare.title=Compara
 compare.header=Compara PDF
+compare.highlightColor.1=Highlight Color 1:
+compare.highlightColor.2=Highlight Color 2:
 compare.document.1=Documento 1
 compare.document.2=Documento 2
 compare.submit=Compara
@@ -803,7 +822,7 @@ merge.title=Unisci
 merge.header=Unisci 2 o più PDF
 merge.sortByName=Ordina per nome
 merge.sortByDate=Ordina per data
-merge.removeCertSign=Remove digital signature in the merged file?
+merge.removeCertSign=Rimuovere la firma digitale nel file unito?
 merge.submit=Unisci
 
 
@@ -821,6 +840,7 @@ pdfOrganiser.mode.6=Divisione pari-dispari
 pdfOrganiser.mode.7=Rimuovi prima
 pdfOrganiser.mode.8=Rimuovi ultima
 pdfOrganiser.mode.9=Rimuovi la prima e l'ultima
+pdfOrganiser.mode.10=Unione pari-dispari
 pdfOrganiser.placeholder=(ad es. 1,3,2 o 4-8,2,10-12 o 2n-1)
 
 
@@ -1083,13 +1103,13 @@ licenses.version=Versione
 licenses.license=Licenza
 
 #survey
-survey.nav=Survey
-survey.title=Stirling-PDF Survey
-survey.description=Stirling-PDF has no tracking so we want to hear from our users to improve Stirling-PDF!
-survey.please=Please consider taking our survey!
-survey.disabled=(Survey popup will be disabled in following updates but available at foot of page)
-survey.button=Take Survey
-survey.dontShowAgain=Don't show again
+survey.nav=Sondaggio
+survey.title=Sondaggio Stirling-PDF
+survey.description=Stirling-PDF non fa tracciamento, quindi vogliamo sentire i nostri utenti per migliorare Stirling-PDF!
+survey.please=Ti invitiamo a prendere in considerazione la possibilità di partecipare al nostro sondaggio!
+survey.disabled=(Il popup del sondaggio verrà disabilitato nei prossimi aggiornamenti ma sarà disponibile a piè di pagina)
+survey.button=Partecipa al sondaggio
+survey.dontShowAgain=Non mostrare più
 
 
 #error
