--- a/src/main/resources/messages_cs_CZ.properties
+++ b/src/main/resources/messages_cs_CZ.properties
@@ -191,6 +191,23 @@ adminUserSettings.submit=Uložit Uživatele
 adminUserSettings.changeUserRole=Zmenit Roli Uživatele
 adminUserSettings.authenticated=Ověřeno
 
+
+database.title=Database Import/Export
+database.header=Database Import/Export
+database.fileName=File Name
+database.creationDate=Creation Date
+database.fileSize=File Size
+database.deleteBackupFile=Delete Backup File
+database.importBackupFile=Import Backup File
+database.downloadBackupFile=Download Backup File
+database.info_1=When importing data, it is crucial to ensure the correct structure. If you are unsure of what you are doing, seek advice and support from a professional. An error in the structure can cause application malfunctions, up to and including the complete inability to run the application.
+database.info_2=The file name does not matter when uploading. It will be renamed afterward to follow the format backup_user_yyyyMMddHHmm.sql, ensuring a consistent naming convention.
+database.submit=Import Backup
+database.importIntoDatabaseSuccessed=Import into database successed
+database.fileNotFound=File not Found
+database.fileNullOrEmpty=File must not be null or empty
+database.failedImportFile=Failed Import File
+
 #############
 # HOME-PAGE #
 #############
@@ -689,6 +706,8 @@ removeAnnotations.submit=Odebrat
 #compare
 compare.title=Porovnat
 compare.header=Porovnat PDF
+compare.highlightColor.1=Highlight Color 1:
+compare.highlightColor.2=Highlight Color 2:
 compare.document.1=Dokument 1
 compare.document.2=Dokument 2
 compare.submit=Porovnat
@@ -821,6 +840,7 @@ pdfOrganiser.mode.6=Liché-Sudé rozdělení
 pdfOrganiser.mode.7=Odstranit první
 pdfOrganiser.mode.8=Odstranit poslední
 pdfOrganiser.mode.9=Odstranit první a poslední
+pdfOrganiser.mode.10=Odd-Even Merge
 pdfOrganiser.placeholder=(např. 1,3,2 nebo 4-8,2,10-12 nebo 2n-1)
 
 
