--- a/src/main/resources/messages_fr_FR.properties
+++ b/src/main/resources/messages_fr_FR.properties
@@ -191,6 +191,23 @@ adminUserSettings.submit=Ajouter
 adminUserSettings.changeUserRole=Changer le rôle de l'utilisateur
 adminUserSettings.authenticated=Authentifié
 
+
+database.title=Database Import/Export
+database.header=Database Import/Export
+database.fileName=File Name
+database.creationDate=Creation Date
+database.fileSize=File Size
+database.deleteBackupFile=Delete Backup File
+database.importBackupFile=Import Backup File
+database.downloadBackupFile=Download Backup File
+database.info_1=When importing data, it is crucial to ensure the correct structure. If you are unsure of what you are doing, seek advice and support from a professional. An error in the structure can cause application malfunctions, up to and including the complete inability to run the application.
+database.info_2=The file name does not matter when uploading. It will be renamed afterward to follow the format backup_user_yyyyMMddHHmm.sql, ensuring a consistent naming convention.
+database.submit=Import Backup
+database.importIntoDatabaseSuccessed=Import into database successed
+database.fileNotFound=File not Found
+database.fileNullOrEmpty=File must not be null or empty
+database.failedImportFile=Failed Import File
+
 #############
 # HOME-PAGE #
 #############
@@ -271,7 +288,7 @@ home.fileToPDF.desc=Convertissez presque n’importe quel fichiers en PDF (DOCX,
 fileToPDF.tags=convertion,transformation,format,document,image,slide,texte,conversion,office,docs,word,excel,powerpoint
 
 home.ocr.title=OCR / Nettoyage des numérisations
-home.ocr.desc=Utilisez l’OCR pour analyser et détecter le texte des images d’un PDF et le rajouter en temps que tel.
+home.ocr.desc=Utilisez l’OCR pour analyser et détecter le texte des images d’un PDF et le rajouter en tant que tel.
 ocr.tags=ocr,reconnaissance,texte,image,numérisation,scan,read,identify,detection,editable
 
 
@@ -689,6 +706,8 @@ removeAnnotations.submit=Supprimer
 #compare
 compare.title=Comparer
 compare.header=Comparer
+compare.highlightColor.1=Highlight Color 1:
+compare.highlightColor.2=Highlight Color 2:
 compare.document.1=Document 1
 compare.document.2=Document 2
 compare.submit=Comparer
@@ -821,6 +840,7 @@ pdfOrganiser.mode.6=Partage impair-pair
 pdfOrganiser.mode.7=Supprimer le premier
 pdfOrganiser.mode.8=Supprimer le dernier
 pdfOrganiser.mode.9=Supprimer le premier et le dernier
+pdfOrganiser.mode.10=Odd-Even Merge
 pdfOrganiser.placeholder=(e.g. 1,3,2 or 4-8,2,10-12 or 2n-1)
 
 
