--- a/src/main/resources/messages_ko_KR.properties
+++ b/src/main/resources/messages_ko_KR.properties
@@ -191,6 +191,23 @@ adminUserSettings.submit=사용자 저장
 adminUserSettings.changeUserRole=사용자의 역할 변경
 adminUserSettings.authenticated=Authenticated
 
+
+database.title=Database Import/Export
+database.header=Database Import/Export
+database.fileName=File Name
+database.creationDate=Creation Date
+database.fileSize=File Size
+database.deleteBackupFile=Delete Backup File
+database.importBackupFile=Import Backup File
+database.downloadBackupFile=Download Backup File
+database.info_1=When importing data, it is crucial to ensure the correct structure. If you are unsure of what you are doing, seek advice and support from a professional. An error in the structure can cause application malfunctions, up to and including the complete inability to run the application.
+database.info_2=The file name does not matter when uploading. It will be renamed afterward to follow the format backup_user_yyyyMMddHHmm.sql, ensuring a consistent naming convention.
+database.submit=Import Backup
+database.importIntoDatabaseSuccessed=Import into database successed
+database.fileNotFound=File not Found
+database.fileNullOrEmpty=File must not be null or empty
+database.failedImportFile=Failed Import File
+
 #############
 # HOME-PAGE #
 #############
@@ -689,6 +706,8 @@ removeAnnotations.submit=제거하다
 #compare
 compare.title=비교
 compare.header=PDF 문서 비교
+compare.highlightColor.1=Highlight Color 1:
+compare.highlightColor.2=Highlight Color 2:
 compare.document.1=문서 1
 compare.document.2=문서 2
 compare.submit=비교
@@ -821,6 +840,7 @@ pdfOrganiser.mode.6=홀수-짝수 분할
 pdfOrganiser.mode.7=첫 번째 항목 삭제
 pdfOrganiser.mode.8=마지막 항목 제거
 pdfOrganiser.mode.9=첫 번째와 마지막 제거
+pdfOrganiser.mode.10=Odd-Even Merge
 pdfOrganiser.placeholder=(예: 1,3,2 또는 4-8,2,10-12 또는 2n-1)
 
 
