--- a/src/main/resources/messages_no_NB.properties
+++ b/src/main/resources/messages_no_NB.properties
@@ -55,7 +55,7 @@ userNotFoundMessage=Bruker ikke funnet.
 incorrectPasswordMessage=Nåværende passord er feil.
 usernameExistsMessage=Det nye brukernavnet eksisterer allerede.
 invalidUsernameMessage=Ugyldig brukernavn, brukernavnet kan bare inneholde bokstaver, tall og følgende spesialtegn @._+- eller må være en gyldig e-postadresse.
-confirmPasswordErrorMessage=New Password and Confirm New Password must match.
+confirmPasswordErrorMessage=Nytt passord og Bekreft nytt passord må være like.
 deleteCurrentUserMessage=Kan ikke slette den innloggede brukeren.
 deleteUsernameExistsMessage=Brukernavnet eksisterer ikke og kan ikke slettes.
 downgradeCurrentUserMessage=Kan ikke nedgradere den innloggede brukerens rolle.
@@ -175,8 +175,8 @@ adminUserSettings.header=Admin Brukerkontroll Innstillinger
 adminUserSettings.admin=Admin
 adminUserSettings.user=Bruker
 adminUserSettings.addUser=Legg til Ny Bruker
-adminUserSettings.deleteUser=Delete User
-adminUserSettings.confirmDeleteUser=Should the user be deleted?
+adminUserSettings.deleteUser=Slett Bruker
+adminUserSettings.confirmDeleteUser=Skal brukeren slettes?
 adminUserSettings.usernameInfo=Brukernavn kan bare inneholde bokstaver, tall og følgende spesialtegn @._+- eller må være en gyldig e-postadresse.
 adminUserSettings.roles=Roller
 adminUserSettings.role=Rolle
@@ -190,6 +190,23 @@ adminUserSettings.forceChange=Tving bruker til å endre passord ved innlogging
 adminUserSettings.submit=Lagre Bruker
 adminUserSettings.changeUserRole=Endre Brukerens Rolle
 adminUserSettings.authenticated=Autentisert
+
+
+database.title=Database Import/Export
+database.header=Database Import/Export
+database.fileName=File Name
+database.creationDate=Creation Date
+database.fileSize=File Size
+database.deleteBackupFile=Delete Backup File
+database.importBackupFile=Import Backup File
+database.downloadBackupFile=Download Backup File
+database.info_1=When importing data, it is crucial to ensure the correct structure. If you are unsure of what you are doing, seek advice and support from a professional. An error in the structure can cause application malfunctions, up to and including the complete inability to run the application.
+database.info_2=The file name does not matter when uploading. It will be renamed afterward to follow the format backup_user_yyyyMMddHHmm.sql, ensuring a consistent naming convention.
+database.submit=Import Backup
+database.importIntoDatabaseSuccessed=Import into database successed
+database.fileNotFound=File not Found
+database.fileNullOrEmpty=File must not be null or empty
+database.failedImportFile=Failed Import File
 
 #############
 # HOME-PAGE #
@@ -540,8 +557,8 @@ HTMLToPDF.marginRight=Høyre margin på siden i millimeter. (Blank for standard)
 HTMLToPDF.printBackground=Vis bakgrunnen til nettsider.
 HTMLToPDF.defaultHeader=Aktiver standardtopp (Navn og sidenummer)
 HTMLToPDF.cssMediaType=Endre CSS-mediatypen til siden.
-HTMLToPDF.none=None
-HTMLToPDF.print=Print
+HTMLToPDF.none=Ingen
+HTMLToPDF.print=Utskrift
 HTMLToPDF.screen=Skjerm
 
 
@@ -689,6 +706,8 @@ removeAnnotations.submit=Fjern
 #compare
 compare.title=Sammenlign
 compare.header=Sammenlign PDF-er
+compare.highlightColor.1=Highlight Color 1:
+compare.highlightColor.2=Highlight Color 2:
 compare.document.1=Dokument 1
 compare.document.2=Dokument 2
 compare.submit=Sammenlign
@@ -803,7 +822,7 @@ merge.title=Slå sammen
 merge.header=Slå sammen flere PDF-er (2+)
 merge.sortByName=Sorter etter navn
 merge.sortByDate=Sorter etter dato
-merge.removeCertSign=Remove digital signature in the merged file?
+merge.removeCertSign=Fjern digital signatur i den sammenslåtte filen?
 merge.submit=Slå sammen
 
 
@@ -821,6 +840,7 @@ pdfOrganiser.mode.6=Oddetall-jevntall splitt
 pdfOrganiser.mode.7=Fjern først
 pdfOrganiser.mode.8=Fjern sist
 pdfOrganiser.mode.9=Fjern først og sist
+pdfOrganiser.mode.10=Partall-Oddetall Sammenslåing
 pdfOrganiser.placeholder=(f.eks. 1,3,2 eller 4-8,2,10-12 eller 2n-1)
 
 
