--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -1123,5 +1123,5 @@ error.github=Ein Ticket auf GitHub einreichen
 error.showStack=Stack-Trace anzeigen
 error.copyStack=Stack-Trace kopieren
 error.githubSubmit=GitHub - Ein Ticket einreichen
-error.discordSubmit=Discord - Unterstützungsbeitrag einreichen
+error.discordSubmit=Discord - Submit Support post
 
